--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
+        <p>He, Nömselchen- Was geht ab?.</p>
     </body>
     
      <div id="map"></div>
